# playlist-manager

./: .gitignore  README.md  pyproject.toml
src/playlist_manager/: __main__.py  playlists.json  utils.py
src/playlist_manager/api/: app.py  schemas.py
src/playlist_manager/concurency/: load_initial_data.py
src/playlist_manager/core/: __init__.py  entities.py  manager.py
src/playlist_manager/db/: __init__.py  crud.py  database.py  models.py
src/playlist_manager/scripts/: __init__.py  load_initial_data.py
